manifests/mlflow/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
  labels:
    istio-injection : enabled
