manifests/mlflow/base/istio-virtual-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow
  namespace: mlflow
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: mlflow
    match:
    - uri:
        prefix: "/mlflow/"
    rewrite:
       uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: service-mlflow.mlflow.svc.cluster.local
